@@ -41,32 +41,6 @@ var logger  = { };
 var applier = { };
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief starts the replication logger - this is a no-op in ArangoDB 2.2 and
-/// higher
-////////////////////////////////////////////////////////////////////////////////
-
-logger.start = function () {
-  'use strict';
-
-  // the logger in ArangoDB 2.2 is now the WAL...
-  // so the logger cannot be started but is always running
-  return true;
-};
-
-////////////////////////////////////////////////////////////////////////////////
-/// @brief stops the replication logger - this is a no-op in ArangoDB 2.2 and
-/// higher
-////////////////////////////////////////////////////////////////////////////////
-
-logger.stop = function () {
-  'use strict';
-
-  // the logger in ArangoDB 2.2 is now the WAL...
-  // so the logger cannot be stopped
-  return true;
-};
-
-////////////////////////////////////////////////////////////////////////////////
 /// @brief return the replication logger state
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -74,16 +48,6 @@ logger.state = function () {
   'use strict';
 
   return internal.getStateReplicationLogger();
-};
-
-////////////////////////////////////////////////////////////////////////////////
-/// @brief returns the configuration of the replication logger
-////////////////////////////////////////////////////////////////////////////////
-
-logger.properties = function () {
-  'use strict';
-
-  return internal.configureReplicationLogger();
 };
 
 ////////////////////////////////////////////////////////////////////////////////
